--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,14 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode8
-language: objective-c
+osx_image: xcode9
+language: swift
 
 before_install:
-  - brew update
-  - gem install cocoapods --pre
   - brew outdated xctool || brew upgrade xctool
+  - carthage update
 
 script:
-  - set -o pipefail && xcodebuild -workspace "Example/Tutti.xcworkspace" -scheme "Tutti-Example" -sdk "iphonesimulator" | xcpretty -c
+  - xcodebuild -project "Tutti.xcodeproj" -scheme "TuttiExample" -sdk "iphonesimulator" | xcpretty -c
   - pod lib lint
-
+  - fastlane test
