--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -2,6 +2,7 @@ disabled_rules:
   - file_length
   - function_body_length
   - line_length
+  - nesting
   - shorthand_operator
   - trailing_whitespace
   - type_body_length
@@ -22,3 +23,5 @@ variable_name:
     - id
     - ok
     - vc
+    - x
+    - y
