--- a/Tutti.xcodeproj/xcshareddata/xcschemes/Tutti.xcscheme
+++ b/Tutti.xcodeproj/xcshareddata/xcschemes/Tutti.xcscheme
@@ -25,7 +25,7 @@
             buildForRunning = "YES"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4537E88C1FD3DFAC0007501C"
