--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -22,7 +22,7 @@ concurrency:
   
 jobs:
   deploy:
-    runs-on: macos-15 # macos-latest
+    runs-on: macos-latest # macos-15
     
     environment:
       name: github-pages
@@ -38,7 +38,7 @@ jobs:
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: 16.4 # latest-stable
+          xcode-version: latest-stable # 16.4
 
       - name: Build DocC
         run: bash scripts/docc.sh
