--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,13 @@ on:
   pull_request:
     branches: ["main"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
-    runs-on: macos-15 # macos-latest
+    runs-on: macos-latest # macos-15
 
     steps:
       - name: Checkout Code
@@ -22,7 +26,7 @@ jobs:
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: 16.4 # latest-stable
+          xcode-version: latest-stable # 16.4
 
       - name: Tests All Platforms
         run: bash scripts/test.sh
